kubernetes/blue-green/blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-application-deployment-blue
  labels:
    app: example-application-app-blue
spec:
  replicas: 10
  selector:
    matchLabels:
      app: example-application-pod-blue
  template:
    metadata:
      labels:
        app: example-application-pod-blue
    spec:
      containers:
        - name: js-app
          image: example-application:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: example-application-service-blue
spec:
  selector:
    app: example-application-pod-blue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
