kubernetes/blue-green/green-production.yml
apiVersion: v1
kind: Service
metadata:
  name: example-application-service-staging
spec:
  selector:
    app: example-application-pod-blue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: example-application-service-production
spec:
  selector:
    app: example-application-pod-green
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
