kubernetes/blue-green/green-v3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-application-deployment-green
  labels:
    app: example-application-app-green
spec:
  replicas: 10
  selector:
    matchLabels:
      app: example-application-pod-green
  template:
    metadata:
      labels:
        app: example-application-pod-green
    spec:
      containers:
        - name: js-app
          image: example-application:v3
          imagePullPolicy: Never
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: example-application-service-green
spec:
  selector:
    app: example-application-pod-green
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
