kubernetes/blue-green/ingress-blue-production.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-application-ingress-production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: production.enterjs.test
      http:
        paths:
          - path: /*
            backend:
              serviceName: example-application-service-blue
              servicePort: 8080
    - host: staging.enterjs.test
      http:
        paths:
          - path: /*
            backend:
              serviceName: example-application-service-green
              servicePort: 8080
