kubernetes/blue-green/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: enterjs-app-ingress-production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: production.enterjs.test
      http:
        paths:
          - path: /*
            backend:
              serviceName: enterjs-app-service-production
              servicePort: 8080
    - host: staging.enterjs.test
      http:
        paths:
          - path: /*
            backend:
              serviceName: enterjs-app-service-staging
              servicePort: 8080
